--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <li>несовершенство систем управления;</li>
   <li>различные травмы;</li>
 </ul>
+<img src="images/i.jpg" alt="">
 
 </body>
 </html>
